ticket.opensciencegrid.org/attachment/view/16061/iptables
# Generated by iptables-save v1.3.5 on Tue Apr 27 10:47:33 2010
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8793019:25296514895]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A INPUT -p esp -j ACCEPT 
-A INPUT -s 129.79.36.86 -p tcp -m tcp --dport 5666 -j ACCEPT 
# globus tcp port range
-A INPUT -p tcp -m tcp --dport 47100:47199 -j ACCEPT 

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 129.79.0.0/255.255.0.0 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 192.168.36.0/255.255.255.0 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 140.182.0.0/255.255.0.0 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 149.160.0.0/255.255.0.0 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
# gram
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2119 -j ACCEPT 
# gram-ws
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9443 -j ACCEPT 
# gridftp
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2118 -j ACCEPT 
# gram 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2811 -j ACCEPT 
# rsv httpd
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Tue Apr 27 10:47:33 2010
